web-allow-all-namespaces.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: default
  name: web-allow-all-namespaces
spec:
  podSelector:
    matchLabels:
      app: web
  ingress:
  - from:
    - namespaceSelector: {}



Diese NetworkPolicy erlaubt den Verkehr von allen Pods in allen Namespaces zu einer bestimmten Anwendung.

Anwendungsfall:

    Sie haben einen gemeinsamen Dienst oder eine Datenbank, die von Bereitstellungen in verschiedenen Namespaces verwendet wird.
